[gd_scene load_steps=3 format=3 uid="uid://bgfic17nc60f4"]

[ext_resource type="Script" path="res://optionsMenu.gd" id="1_5als8"]
[ext_resource type="PackedScene" uid="uid://10ngpxurb116" path="res://transitions.tscn" id="2_27tpq"]

[node name="OptionsMenu" type="Node2D"]
script = ExtResource("1_5als8")

[node name="ButtonManager" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Back" type="Button" parent="ButtonManager"]
layout_mode = 0
offset_left = 457.0
offset_top = 574.0
offset_right = 710.0
offset_bottom = 618.0
text = "BACK"

[node name="ColorRect" parent="." instance=ExtResource("2_27tpq")]
visible = false

[node name="fadeTimer" type="Timer" parent="ColorRect"]

[connection signal="pressed" from="ButtonManager/Back" to="." method="_on_button_pressed"]
